--- a/task9/forjenkins/index.html
+++ b/task9/forjenkins/index.html
@@ -4,6 +4,6 @@
     <title>Devops BaseCamp</title>
   </head>
   <body>
-    <p>This is file from dev branch</p>
+    <p>This is file from main branch</p>
   </body>
 </html>
